# assignment1-basics

./: .gitignore  CHANGELOG.md  QUICK_START.md  README.md  SETUP.md  encode_text.py  pyproject.toml  setup.sh  train_bpe.py
bpe/: Cargo.toml
bpe/src/: bpe.rs  lib.rs  main.rs  pretokenize.rs
cs336_basics/: data.py  model.py  nn_utils.py  optim.py  tokenizer.py
rsbpe/: Cargo.toml
rsbpe/src/: lib.rs
tests/: adapters.py  test_consistency.py  test_train_bpe.py
