[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokenizer_rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
